comment extra nav temps and logic, working site nav on left bar

--- a/client/client.jade
+++ b/client/client.jade
@@ -48,7 +48,7 @@ template(name='layout')
     +nav
     .ui.bottom.attached.pushable.segment
         +leftbar
-        +rightbar
+        // +rightbar
                 
         // #main_area.global_container.pusher.invert
         #main_area.global_container.pusher(class=currentUser.invert_class)
@@ -62,6 +62,6 @@ template(name='layout')
     
     
     
-template(name='not_found')
-    .ui.basic.center.aligned.padded.segment
-        .ui.center.aligned.header page not found
+// template(name='not_found')
+//     .ui.basic.center.aligned.padded.segment
+//         .ui.center.aligned.header page not found
