--- a/parts/nav.jade
+++ b/parts/nav.jade
@@ -77,181 +77,181 @@ template(name='nav')
 
 
 
-template(name='bookmarkbar')
-    .ui.fluid.attached.segment(style="background-color:#{currentUser.theme_color};" class=currentUser.invert_class)
-        .ui.middle.aligned.selection.list.smallscroll
-            each currentUser.bookmarks
-                a.item.close_bookmarkbar(href="/#{_id}}")
-                    img.ui.avatar.image(src="{{c.url profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                    .ui.small.inline.header #{title}
-    a.ui.attached.button.close_topbar(href="/profile")
-        i.user.icon
-        |profile
+// template(name='bookmarkbar')
+//     .ui.fluid.attached.segment(style="background-color:#{currentUser.theme_color};" class=currentUser.invert_class)
+//         .ui.middle.aligned.selection.list.smallscroll
+//             each currentUser.bookmarks
+//                 a.item.close_bookmarkbar(href="/#{_id}}")
+//                     img.ui.avatar.image(src="{{c.url profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+//                     .ui.small.inline.header #{title}
+//     a.ui.attached.button.close_topbar(href="/profile")
+//         i.user.icon
+//         |profile
         
         
-template(name='friendbar')
-    // .ui.fluid.attached.inverted.blue.segment(style="background-color:#{currentUser.theme_color};" class=currentUser.invert_class)
-    .ui.fluid.attached.inverted.invert.segment(class=currentUser.invert_class)
-        // .ui.middle.aligned.selection.list.smallscroll
-        each currentUser.friends
-            a.ui.black.circular.tertiary.button.close_friendbar(href="/u/#{username}")
-                // .right.floated
-                    // i.gift.link.icon(title="gift #{username} points") 
-                    // .ui.icon.button(title="message #{username}") 
-                    //     i.mail.icon
-                img.ui.avatar.image(src="{{c.url profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                .ui.small.inline.inverted.header #{username}
-    a.ui.attached.button.close_topbar(href="/inbox")
-        i.users.icon
-        |friends
+// template(name='friendbar')
+//     // .ui.fluid.attached.inverted.blue.segment(style="background-color:#{currentUser.theme_color};" class=currentUser.invert_class)
+//     .ui.fluid.attached.inverted.invert.segment(class=currentUser.invert_class)
+//         // .ui.middle.aligned.selection.list.smallscroll
+//         each currentUser.friends
+//             a.ui.black.circular.tertiary.button.close_friendbar(href="/u/#{username}")
+//                 // .right.floated
+//                     // i.gift.link.icon(title="gift #{username} points") 
+//                     // .ui.icon.button(title="message #{username}") 
+//                     //     i.mail.icon
+//                 img.ui.avatar.image(src="{{c.url profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+//                 .ui.small.inline.inverted.header #{username}
+//     a.ui.attached.button.close_topbar(href="/inbox")
+//         i.users.icon
+//         |friends
 
-template(name='topbar')
-    .ui.fluid.large.attached.inverted.invert.segment(style="background-color:#{currentUser.theme_color};" class=currentUser.invert_class)
-        .ui.middle.aligned.divided.list
-            each recent_alerts
-                +recent_alert
-    a.ui.attached.button.close_topbar(href="/inbox")
-        i.inbox.large.icon
-        |inbox
-template(name='recent_alert')        
-    .item.alert
-        .right.floated.content
-            i.eye.link.large.icon.mark_read(title='mark read')
-        img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
-        .content
-            .header
-                |#{body} 
-            .description #{_author.name} #{made_when}
+// template(name='topbar')
+//     .ui.fluid.large.attached.inverted.invert.segment(style="background-color:#{currentUser.theme_color};" class=currentUser.invert_class)
+//         .ui.middle.aligned.divided.list
+//             each recent_alerts
+//                 +recent_alert
+//     a.ui.attached.button.close_topbar(href="/inbox")
+//         i.inbox.large.icon
+//         |inbox
+// template(name='recent_alert')        
+//     .item.alert
+//         .right.floated.content
+//             i.eye.link.large.icon.mark_read(title='mark read')
+//         img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
+//         .content
+//             .header
+//                 |#{body} 
+//             .description #{_author.name} #{made_when}
 
 
 
-template(name='footer')
-    .ui.fluid.basic.attached.segment.footer
-        .ui.container.stackable.grid
-            .eight.wide.column
-                .ui.header #{connect_status.connected}
-                .ui.header #{connect_status.status}
-                with currentUser
-                    if is_dev
-                        +textarea_edit k='notes' d=1
-                if is_dev    
-                    //with current_user
-                    //    +role_switcher
-                    input.old_key(type='text' placeholder='old key')
-                    input.new_key(type='text' placeholder='new key')
-                    .ui.button.submit_rename submit
-            .eight.wide.column
-                unless currentUser
-                    a.ui.big.basic.button(href='/login')
-                        i.sign.in.icon
-                        |login
-                if is_eric
-                    with currentUser
-                        +role_switcher
-                        //+tribe_switcher
-                else if is_dev
-                    with currentUser
-                        +role_switcher
-        if is_user
-            .row
-                .ui.center.aligned.inverted.header
-                    i.copyright.outline.icon
-                    |dao
+// template(name='footer')
+//     .ui.fluid.basic.attached.segment.footer
+//         .ui.container.stackable.grid
+//             .eight.wide.column
+//                 .ui.header #{connect_status.connected}
+//                 .ui.header #{connect_status.status}
+//                 with currentUser
+//                     if is_dev
+//                         +textarea_edit k='notes' d=1
+//                 if is_dev    
+//                     //with current_user
+//                     //    +role_switcher
+//                     input.old_key(type='text' placeholder='old key')
+//                     input.new_key(type='text' placeholder='new key')
+//                     .ui.button.submit_rename submit
+//             .eight.wide.column
+//                 unless currentUser
+//                     a.ui.big.basic.button(href='/login')
+//                         i.sign.in.icon
+//                         |login
+//                 if is_eric
+//                     with currentUser
+//                         +role_switcher
+//                         //+tribe_switcher
+//                 else if is_dev
+//                     with currentUser
+//                         +role_switcher
+//         if is_user
+//             .row
+//                 .ui.center.aligned.inverted.header
+//                     i.copyright.outline.icon
+//                     |dao
                     
                     
-template(name='role_switcher')
-    .ui.segment
-        .ui.grey.inline.center.aligned.small.header 
-            //- +i n='anonymous-mask'
-            i.shield.icon(title='role switcher')
-            |#{username} role switcher
-        if is_eric
-            //- +user_array_element_toggle k='roles' v='dev' user=currentUser
-            +multi_doc_edit k='roles' l='roles' ref_model='role' d=1
-        if current_userh
-            with current_user
-                +multi_doc_edit k='roles' l='roles' ref_model='role' d=1
-        //- +user_array_element_toggle k='roles' v='dev' user=currentUser
-        //- +user_array_element_toggle k='roles' v='user' user=currentUser
-        //- +user_array_element_toggle k='roles' v='staff' user=currentUser
-        //- +user_array_element_toggle k='roles' v='resident' user=currentUser
-        //- +user_array_element_toggle k='roles' v='owner' user=currentUser
-template(name='chatpop')
-    if viewing_chat
-        +view_chatpop
-    else 
-        .ui.large.icon.basic.circular.button.open_chat
-            i.chat.outline.large.icon
+// template(name='role_switcher')
+//     .ui.segment
+//         .ui.grey.inline.center.aligned.small.header 
+//             //- +i n='anonymous-mask'
+//             i.shield.icon(title='role switcher')
+//             |#{username} role switcher
+//         if is_eric
+//             //- +user_array_element_toggle k='roles' v='dev' user=currentUser
+//             +multi_doc_edit k='roles' l='roles' ref_model='role' d=1
+//         if current_userh
+//             with current_user
+//                 +multi_doc_edit k='roles' l='roles' ref_model='role' d=1
+//         //- +user_array_element_toggle k='roles' v='dev' user=currentUser
+//         //- +user_array_element_toggle k='roles' v='user' user=currentUser
+//         //- +user_array_element_toggle k='roles' v='staff' user=currentUser
+//         //- +user_array_element_toggle k='roles' v='resident' user=currentUser
+//         //- +user_array_element_toggle k='roles' v='owner' user=currentUser
+// template(name='chatpop')
+//     if viewing_chat
+//         +view_chatpop
+//     else 
+//         .ui.large.icon.basic.circular.button.open_chat
+//             i.chat.outline.large.icon
 
-template(name='view_chatpop')
-    .chatpop.invert
-        a.ui.invert.pointer.grey.header.close_chat 
-            i.chat.icon
-            |chat
-        .ui.large.list.medcroll
-            each last_messages
-                .item 
-                    if bot
-                        i.brain.inline.grey.icon
-                        strong #{response.result}
-                    else
-                        strong #{body} 
-                    small.ui.grey.text #{when}
-        .ui.fluid.icon.transparent.input 
-            i.plus.icon
-            input.add_chat(type='text' placeholder='chat...')
+// template(name='view_chatpop')
+//     .chatpop.invert
+//         a.ui.invert.pointer.grey.header.close_chat 
+//             i.chat.icon
+//             |chat
+//         .ui.large.list.medcroll
+//             each last_messages
+//                 .item 
+//                     if bot
+//                         i.brain.inline.grey.icon
+//                         strong #{response.result}
+//                     else
+//                         strong #{body} 
+//                     small.ui.grey.text #{when}
+//         .ui.fluid.icon.transparent.input 
+//             i.plus.icon
+//             input.add_chat(type='text' placeholder='chat...')
 
 
 
             
             
             
-template(name='rightbar')
-    .ui.right.sidebar.vertical.borderless.inverted.invert.menu.scrolling(style="background-color:#{current_user.theme_color};" class=currentUser.invert_class)
-        // a.item.toggle_rightbar(href="/u/#{currentUser.username}" class="{{isActiveRoute 'user_layout'}}")
-        //     img.ui.avatar.compact.image(src="{{c.url 'homestar_logo' height=200 width=200 gravity='face' crop='fill'}}")
-        //     |#{currentUser.name}
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/" class="{{isActiveRoute 'user_dashboard'}}")
-            | dashboard (#{currentUser.points}p)
-            i.large.dashboard.icon
+// template(name='rightbar')
+//     .ui.right.sidebar.vertical.borderless.inverted.invert.menu.scrolling(style="background-color:#{current_user.theme_color};" class=currentUser.invert_class)
+//         // a.item.toggle_rightbar(href="/u/#{currentUser.username}" class="{{isActiveRoute 'user_layout'}}")
+//         //     img.ui.avatar.compact.image(src="{{c.url 'homestar_logo' height=200 width=200 gravity='face' crop='fill'}}")
+//         //     |#{currentUser.name}
+//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/" class="{{isActiveRoute 'user_dashboard'}}")
+//             | dashboard (#{currentUser.points}p)
+//             i.large.dashboard.icon
         
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/about" class="{{isActiveRoute 'user_about'}}")
-            | about
-            i.large.info.icon
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/kin" class="{{isActiveRoute 'kin'}}")
-            | #{currentUser.total_credit_amount}p received
-            i.large.chevron.down.icon
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/kout" class="{{isActiveRoute 'user_debits'}}")
-            | #{currentUser.total_debit_amount}k out
-            i.large.chevron.up.icon
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/events" class="{{isActiveRoute 'user_events'}}")
-            | events
-            i.large.calendar.icon
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/requests" class="{{isActiveRoute 'user_requests'}}")
-            | requests
-            i.large.concierge.bell.icon
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/orders" class="{{isActiveRoute 'user_orders'}}")
-            | orders
-            i.large.cart.icon
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/offers" class="{{isActiveRoute 'user_offers'}}")
-            | offers
-            i.large.hand.holding.heart.icon
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}")
-            | chat
-            i.chat.icon
-        .ui.divider
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/edit" title='edit your account')
-            i.cog.large.icon
-            |settings
-        a.item.toggle_nightmode.toggle_rightbar(href="#")
-            i.lightbulb.large.icon
-            |dark mode
-        a.item.logout(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}" )
-            |logout
-            if is_logging_out
-                i.refresh.loading.icon
-            else
-                i.sign.out.icon
+//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/about" class="{{isActiveRoute 'user_about'}}")
+//             | about
+//             i.large.info.icon
+//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/kin" class="{{isActiveRoute 'kin'}}")
+//             | #{currentUser.total_credit_amount}p received
+//             i.large.chevron.down.icon
+//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/kout" class="{{isActiveRoute 'user_debits'}}")
+//             | #{currentUser.total_debit_amount}k out
+//             i.large.chevron.up.icon
+//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/events" class="{{isActiveRoute 'user_events'}}")
+//             | events
+//             i.large.calendar.icon
+//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/requests" class="{{isActiveRoute 'user_requests'}}")
+//             | requests
+//             i.large.concierge.bell.icon
+//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/orders" class="{{isActiveRoute 'user_orders'}}")
+//             | orders
+//             i.large.cart.icon
+//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/offers" class="{{isActiveRoute 'user_offers'}}")
+//             | offers
+//             i.large.hand.holding.heart.icon
+//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}")
+//             | chat
+//             i.chat.icon
+//         .ui.divider
+//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/edit" title='edit your account')
+//             i.cog.large.icon
+//             |settings
+//         a.item.toggle_nightmode.toggle_rightbar(href="#")
+//             i.lightbulb.large.icon
+//             |dark mode
+//         a.item.logout(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}" )
+//             |logout
+//             if is_logging_out
+//                 i.refresh.loading.icon
+//             else
+//                 i.sign.out.icon
 
 
 
@@ -261,7 +261,7 @@ template(name='leftbar')
             i.yin.yang.icon
             | dao
         each stack_sites
-            a.item.toggle_leftbar(href="/u/#{currentUser.username}" class="{{isActiveRoute 'user_dashboard'}}")
+            a.item.toggle_leftbar(href="/site/#{api_site_parameter}" class="{{isActiveRoute 'user_dashboard'}}")
                 img(src=logo_url class=currentUser.invert_class)
                 // | #{name}
         // a.item.toggle_leftbar(href="/finance" class="{{isActivePath '/finance'}}")
