just images in sites grid, replace tags with tag_count in doc_list in site,

--- a/client/s.css
+++ b/client/s.css
@@ -2,9 +2,9 @@ body {
     /* font-family: 'Raleway', sans-serif !important; */
     /* font-family: 'Lato+Mono', sans-serif !important; */
     /* font-family: 'Lato', sans-serif !important; */
-     font-size: 110% !important; 
+     font-size: 100% !important; 
     /* line-height: 200% !important; */
-     background: rgba(0,0,0,.8) !important; 
+     /*background: rgba(0,0,0,.8) !important; */
     /*scroll-behavior: smooth;*/
     /*margin-top: 5em;*/
     /*background: rgba(200,200,200,1) !important;*/
