--- a/parts/nav.jade
+++ b/parts/nav.jade
@@ -1,8 +1,8 @@
 template(name='nav')
     // a.icon.ui.big.circular.icon.button(href='/')
     .ui.fluid.attached.borderless.inverted.menu.topnav(style="background-color:#{current_user.theme_color};")
-        a.icon.header.item.pointer.toggle_leftbar
-            i.bars.large.grey.icon
+        // a.icon.header.item.pointer.toggle_leftbar
+        //     i.bars.large.grey.icon
         if connected
             a.icon.item(href='/')
                 i.big.yin.yang.icon
