--- a/parts/users.jade
+++ b/parts/users.jade
@@ -2,8 +2,9 @@ template(name='users')
     .ui.stackable.padded.grid
         .four.wide.column
             .ui.header users
+            +user_cloud
         .twelve.wide.column
-            .ui.five.stackable.centered.cards
+            .ui.five.stackable.centered.cards.scrolling
                 each users
                     a.ui.card(href="/site/#{site}/user/#{user_id}")
                         img.ui.image(src=profile_image class=currentUser.invert_class)
@@ -11,3 +12,39 @@ template(name='users')
                             a.ui.header #{display_name}
                             .description
                                 |#{site}
+                                
+                                
+                                
+template(name='user_cloud')
+    #cloud.ui.center.aligned.fluid.segment
+        if currentUser
+            .ui.icon.input
+                i.plus.icon
+                input#quick_add(type='text')
+            // #add.ui.button
+            //     i.plus.icon
+            //     | Full Add
+        .ui.hidden.divider
+        .ui.left.icon.input
+            i.search.icon
+            input(type='text')
+        if selected_tags
+            #clear_tags.ui.primary.icon.compact.button
+                i.remove.icon
+            each selected_tags
+                .unselect_tag.ui.primary.compact.button
+                    strong #{this}
+        each all_tags
+            .ui.compact.button.select_tag(class=cloud_tag_class) #{this.name}
+                small #{this.count}
+        .ui.header site
+        if selected_sites
+            #clear_tags.ui.primary.icon.compact.button
+                i.remove.icon
+            each selected_sites
+                .unselect_site.ui.primary.compact.button
+                    strong #{this}
+        each all_sites
+            .ui.compact.button.select_site(class=cloud_site_class) #{this.name}
+                small #{this.count}
+                                
