--- a/client/s.css
+++ b/client/s.css
@@ -332,7 +332,7 @@ input
 
 .card {
     /* background: black !important; */
-    border-radius: 10px !important; 
+    /*border-radius: 10px !important; */
 }
 
 a.goto_article {
@@ -534,17 +534,17 @@ a.title, #title {
 
 .label {
   margin:3px !important;
-  border-radius: 7px !important; 
+  /*border-radius: 7px !important; */
 }
 
 input {
     margin: 5px !important;
-    border-radius: 7px !important; 
+    /*border-radius: 7px !important; */
 }
 
 ::-webkit-scrollbar {
   width: 0px !important;
-  border-radius: 10px !important;
+  /*border-radius: 10px !important;*/
 }
 .wrap_input {
     text-align:center !important;
@@ -620,10 +620,10 @@ input {
 
 
 .button{
-  border-radius: 10px !important;  
+  /*border-radius: 10px !important;  */
 }
 .button:active{
-  border-radius: 20px !important;  
+  border-radius: 10px !important;  
     /* transition: all .25s !important; */
     /*transform: translate(0, 1px) !important; */
     /*zoom:105% !important;*/
