--- a/parts/nav.jade
+++ b/parts/nav.jade
@@ -10,8 +10,9 @@ template(name='nav')
             //     i.large.stack.fire.icon
             a.icon.item(href='/users')
                 i.large.users.icon
-            // a.icon.disabled.item(href='/youtube')
-            //     i.large.youtube.icon
+            a.icon.disabled.item(href='/tags')
+                i.large.tags.icon
+            // a.icon.disabled.item(href='/')
             // a.icon.disabled.item(href='/images')
             //     i.large.image.icon
             // a.icon.item(href='/events')
