--- a/client/stack_user.jade
+++ b/client/stack_user.jade
@@ -1,39 +1,14 @@
 template(name='stackuser_page')
     unless stackuser_doc
-        .ui.header no user found
+        // .ui.header no user found
         .ui.button.search 
-            |search
+            |download user info
     with stackuser_doc
         .ui.stackable.padded.grid
             .row
                 .four.wide.column
                     img.ui.rounded.image(src=profile_image class=currentUser.invert_class)
                     .ui.header !{display_name}
-                .four.wide.column
-                    .ui.grey.header.get_badges
-                        i.certificate.icon
-                        |badges
-                    .ui.list
-                        .item 
-                            +i n='medal2--v1' cl="#{currentUser.invert_class} ui avatar image"
-                            |gold #{badge_counts.gold}
-                        .item 
-                            +i n='medal-second-place--v1' cl="#{currentUser.invert_class} ui avatar image"
-                            |silver #{badge_counts.silver}
-                        .item
-                            +i n='medal2-third-place--v1' cl="#{currentUser.invert_class} ui avatar image"
-                            |bronze #{badge_counts.bronze}
-                    .ui.list
-                        each user_badges
-                            .item 
-                                .content 
-                                    .header #{name}
-                                    .description
-                                        |#{rank}
-                                        .ui.label #{badge_id}
-                                        a.ui.circular.icon.compact.button(href=link target="_window")
-                                            i.external.icon
-                .four.wide.column
                     .ui.list
                         .item account id #{account_id}
                         .item employee #{is_employee}
@@ -59,6 +34,31 @@ template(name='stackuser_page')
                     a.ui.external.icon.button(href=link target='_window') 
                         i.linkify.icon
                         // |#{link}
+                .four.wide.column
+                    .ui.grey.header.get_badges
+                        i.certificate.icon
+                        |badges
+                    .ui.list
+                        .item 
+                            +i n='medal2--v1' cl="#{currentUser.invert_class} ui avatar image"
+                            |gold #{badge_counts.gold}
+                        .item 
+                            +i n='medal-second-place--v1' cl="#{currentUser.invert_class} ui avatar image"
+                            |silver #{badge_counts.silver}
+                        .item
+                            +i n='medal2-third-place--v1' cl="#{currentUser.invert_class} ui avatar image"
+                            |bronze #{badge_counts.bronze}
+                    .ui.list
+                        each user_badges
+                            .item 
+                                .content 
+                                    .header #{name}
+                                    .description
+                                        |#{rank}
+                                        .ui.label #{badge_id}
+                                        a.ui.circular.icon.compact.button(href=link target="_window")
+                                            i.external.icon
+                .four.wide.column
 
                 .four.wide.column
                     .ui.header emotion
